--- a/sw/wro-peripherals-board/platformio.ini
+++ b/sw/wro-peripherals-board/platformio.ini
@@ -12,3 +12,7 @@
 platform = raspberrypi
 board = pico
 framework = arduino
+lib_deps = 
+	adafruit/Adafruit SSD1306@^2.5.15
+	adafruit/Adafruit BMP085 Library@^1.2.4
+	adafruit/Adafruit MPU6050@^2.2.6
