--- a/sw/wro-peripherals-board/platformio.ini
+++ b/sw/wro-peripherals-board/platformio.ini
@@ -1,18 +1,11 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
-
 [env:pico]
-platform = raspberrypi
+platform = raspberrypi@9.9.9
 board = pico
 framework = arduino
+platform_packages = 
+    framework-arduino-pico @ https://github.com/earlephilhower/arduino-pico.git
+upload_protocol = picotool
 lib_deps = 
-	adafruit/Adafruit SSD1306@^2.5.15
-	adafruit/Adafruit BMP085 Library@^1.2.4
-	adafruit/Adafruit MPU6050@^2.2.6
+    adafruit/Adafruit SSD1306@^2.5.15
+    adafruit/Adafruit BMP085 Library@^1.2.4
+    adafruit/Adafruit MPU6050@^2.2.6
