--- a/sw/wro-peripherals-board/platformio.ini
+++ b/sw/wro-peripherals-board/platformio.ini
@@ -15,6 +15,6 @@ framework = arduino
 board_build.core = earlephilhower
 lib_deps = 
 	adafruit/Adafruit SSD1306@^2.5.15
-	adafruit/Adafruit BMP085 Library@^1.2.4
+	adafruit/Adafruit BMP085 Unified@^1.1.3
 	adafruit/Adafruit MPU6050@^2.2.6
 	adafruit/Adafruit HMC5883 Unified@^1.2.3
